--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
             />
           </div>
           <div class="body-review">
-            <div class="name-review">Nathan D.</div>
-            <div class="place-review">Germany</div>
+            <div class="name-review">RadhaRaman k.</div>
+            <div class="place-review">India</div>
 
             <div class="desc-review">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -191,7 +191,7 @@
             />
           </div>
           <div class="body-review">
-            <div class="name-review">Mary Will</div>
+            <div class="name-review">Sharin Will</div>
             <div class="place-review">Paris</div>
 
             <div class="desc-review">
@@ -208,7 +208,7 @@
             />
           </div>
           <div class="body-review">
-            <div class="name-review">Kevin Tuck</div>
+            <div class="name-review">Kevin Coock</div>
             <div class="place-review">New York</div>
 
             <div class="desc-review">
